--- a/.eslintrc
+++ b/.eslintrc
@@ -29,7 +29,7 @@
     "node": true
   },
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
   },
