--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint '**/*.js'",
     "prettier": "prettier --write \"**/*.{js,json}\"",
-    "docs": "start-storybook -p 6006"
+    "docs": "start-storybook -p 6006",
+    "deploy-docs": "storybook-to-ghpages"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,6 +39,13 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^5.3.8",
+    "@storybook/addon-docs": "^5.3.8",
+    "@storybook/addon-knobs": "^5.3.8",
+    "@storybook/addon-links": "^5.3.8",
+    "@storybook/addons": "^5.3.8",
+    "@storybook/react": "^5.3.8",
+    "@storybook/storybook-deployer": "^2.8.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
@@ -47,12 +55,6 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "eslint-plugin-standard": "^4.0.1",
-    "prettier": "^1.19.1",
-    "@storybook/addon-actions": "^5.3.8",
-    "@storybook/addon-docs": "^5.3.8",
-    "@storybook/addon-knobs": "^5.3.8",
-    "@storybook/addon-links": "^5.3.8",
-    "@storybook/addons": "^5.3.8",
-    "@storybook/react": "^5.3.8"
+    "prettier": "^1.19.1"
   }
 }
